Simplify metrics tests
At IDE suggestion:
- Let the language deal with auto-boxing
- Use `assertFalse()` more often
- Replace jMock's deprecated `one()` with the recommended `oneOf()`
- Remove unnecessary generic specifiers
- Use `StringBuilder` in tests since each test is single threaded